--- a/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/App.xaml
+++ b/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Tournament_421_KogorevNikitaEvgenievich.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Tournament_421_KogorevNikitaEvgenievich"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Tournament_421_KogorevNikitaEvgenievich">
     <Application.Resources>
          
     </Application.Resources>
