изменение БД, привязка. решение проблем, добавление новых элементов

--- a/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/Views/MainWindow.xaml
+++ b/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/Views/MainWindow.xaml
@@ -8,23 +8,30 @@
         xmlns:views="clr-namespace:Tournament_421_KogorevNikitaEvgenievich.Views"
         d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="TournamentDB_421_TyryshkinAD" 
+        WindowStartupLocation="CenterScreen"
+        MinHeight="450" MinWidth="800"
+        Height="450" Width="800">
+
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type viewmodels:PlayerViewModel}">
+            <views:PlayerView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:CreateTeamViewModel}">
+            <views:CreateTeamView/>
+        </DataTemplate>
+
+        <BooleanToVisibilityConverter x:Key="IsNavDisabledConverter"/>
+    </Window.Resources>
+
     <Grid>
-        <Window.Resources>
-            <DataTemplate DataType="{x:Type viewmodels:PlayerViewModel}">
-                <views:PlayerView/>
-            </DataTemplate>
-
-            <BooleanToVisibilityConverter x:Key="IsNavDisabledConverter"/>
-        </Window.Resources>
-
-        <Grid>
-            <StackPanel Visibility="{Binding IsNavDisabled, Converter={StaticResource IsNavDisabledConverter}}" 
+        <StackPanel Visibility="{Binding IsNavDisabled, Converter={StaticResource IsNavDisabledConverter}}" 
                     Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Button Content="Я игрок" Command="{Binding GoPlayerCommand}"/>
-                <Button Content="Я модератор" Command="{Binding GoViewerCommand}" Margin="10 0"/>
-                <Button Content="Я зритель" Command="{Binding GoModCommand}"/>
-            </StackPanel>
-            <ContentControl Content="{Binding CurrentViewModel}"/>
-        </Grid>
+            <Button Content="Я игрок" Command="{Binding GoPlayerCommand}"/>
+            <Button Content="Я модератор" Command="{Binding GoViewerCommand}" Margin="10 0"/>
+            <Button Content="Я зритель" Command="{Binding GoModCommand}"/>
+        </StackPanel>
+
+        <ContentControl Content="{Binding CurrentViewModel}"/>
+    </Grid>
 </Window>
