--- a/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/Views/PlayerView.xaml
+++ b/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/Views/PlayerView.xaml
@@ -3,29 +3,41 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Tournament_421_KogorevNikitaEvgenievich.Views"
+             xmlns:local="clr-namespace:Tournament_421_KogorevNikitaEvgenievich.Views" xmlns:viewmodels="clr-namespace:Tournament_421_TyryshkinAD.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:PlayerViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
     <UserControl.Resources>
-        <BooleanToVisibilityConverter x:Key="IsNotLoggedConverter"/>
+        <BooleanToVisibilityConverter x:Key="IsLoggedConverter"/>
+        <BooleanToVisibilityConverter x:Key="LoginHiddenConverter"/>
     </UserControl.Resources>
 
     <Grid>
+
         <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Border>
+            <Border Visibility="{Binding LoginHidden,Converter={StaticResource LoginHiddenConverter}}">
                 <StackPanel Orientation="Vertical">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <TextBlock Text="Логин"/>
-                        <TextBox/>
+                        <TextBox Text="{Binding Player.Login}"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 10">
                         <TextBlock Text="Пароль"/>
                         <PasswordBox Name="MyPasswordBox"/>
                     </StackPanel>
+
+                    <Button Content="Войти" 
+                            Command="{Binding LoginCommand}"
+                            CommandParameter="{Binding ElementName=MyPasswordBox}"
+                            HorizontalAlignment="Center"/>
                 </StackPanel>
             </Border>
-            <StackPanel Visibility="{Binding IsNotLogged, Converter={StaticResource IsNotLoggedConverter}}" Orientation="Horizontal">
-                <Button Content="Создать команду"/>
+
+            <TextBlock Text="{Binding Player.Nickname, StringFormat={}Добро пожаловать {0}}" 
+                       Visibility="{Binding IsLogged, Converter={StaticResource IsLoggedConverter}}" HorizontalAlignment="Center"/>
+
+            <StackPanel Visibility="{Binding IsLogged, Converter={StaticResource IsLoggedConverter}}" Orientation="Horizontal">
+                <Button Command="{Binding CreateTeamCommand}" Content="Создать команду"/>
                 <Button Content="Выбрать турнир" Margin="10 0"/>
             </StackPanel>
         </StackPanel>
