попытка все исправть и добавление нового

--- a/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/Views/PlayerView.xaml
+++ b/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/Views/PlayerView.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Tournament_421_KogorevNikitaEvgenievich.Views" xmlns:viewmodels="clr-namespace:Tournament_421_TyryshkinAD.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:PlayerViewModel}"
+             xmlns:local="clr-namespace:Tournament_421_KogorevNikitaEvgenievich.Views"
+             xmlns:viewmodels="clr-namespace:Tournament_421_KogorevNikitaEvgenievich.ViewModels"
+             d:DataContext="{d:DesignInstance Type=viewmodels:PlayerViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
