--- a/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/Views/CreateTeamView.xaml
+++ b/Tournament_421_KogorevNikitaEvgenievich/Tournament_421_KogorevNikitaEvgenievich/Views/CreateTeamView.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Tournament_421_KogorevNikitaEvgenievich.Views" xmlns:viewmodels="clr-namespace:Tournament_421_TyryshkinAD.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:CreateTeamViewModel}"
+             xmlns:local="clr-namespace:Tournament_421_KogorevNikitaEvgenievich.Views" 
+             xmlns:viewmodels="clr-namespace:Tournament_421_KogorevNikitaEvgenievich.ViewModels" 
+             d:DataContext="{d:DesignInstance Type=viewmodels:CreateTeamViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -22,24 +24,39 @@
 
             <Button Content="Выбрать игрока" Command="{Binding AddPlayerCommand}" HorizontalAlignment="Center"/>
 
-            <ItemsControl ItemsSource="{Binding SelectedPlayers}" Margin="10 0">
+            <ItemsControl ItemsSource="{Binding SelectedPlayers}" Margin="0 10">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="200"/>
-                                <ColumnDefinition Width="50"/>
+                                <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock Text="{Binding Player.Nickname}"/>
-                            <Button Content="Убрать"
+                            <TextBlock Text="{Binding Nickname}"/>
+                            <Button Content="Убрать" Grid.Column="1"
                                     Command="{Binding DataContext.RemovePlayerCommand,
                                     RelativeSource={RelativeSource AncestorType=ItemsControl}}"
                                     CommandParameter="{Binding}"/>
                         </Grid>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
+
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+
+                <ItemsControl.Template>
+                    <ControlTemplate>
+                        <ScrollViewer HorizontalScrollBarVisibility="Disabled">
+                            <ItemsPresenter/>
+                        </ScrollViewer>
+                    </ControlTemplate>
+                </ItemsControl.Template>
             </ItemsControl>
+            <Button Content="Создать" Command="{Binding CreateTeamCommand}" HorizontalAlignment="Center"/>
         </StackPanel>
     </Grid>
 </UserControl>
